cleaned up file (not tested)

--- a/cnn/dynamic_deficit_cnn.ipynb
+++ b/cnn/dynamic_deficit_cnn.ipynb
@@ -31,6 +31,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "ogzhAuBz56_g",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Project Setup (Imports, Mounts, and Warnings)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "M0DJNY2_onLW",
         "colab_type": "text"
       },
@@ -61,7 +71,7 @@
       "metadata": {
         "id": "7BgtCd2okfpJ",
         "colab_type": "code",
-        "outputId": "2670f62a-edf9-474b-84ee-dce4d39d2cad",
+        "outputId": "b5ea567d-66a5-464e-96fb-722fea8ab65b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -93,11 +103,47 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "N0-UVNQfSoyv",
+        "id": "q3kqWRyfwc3Z",
         "colab_type": "text"
       },
       "source": [
-        "Specify data"
+        "###Silence Warnings\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "L7RffwGmt3pO",
+        "colab_type": "text"
+      },
+      "source": [
+        "- 0: all messages are logged (default behavior)\n",
+        "- 1: INFO messages are not printed\n",
+        "- 2: INFO and WARNING messages are not printed\n",
+        "- 3: INFO, WARNING, and ERROR messages are not printed"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-2N2_KNFwcfy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2' "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Cbh78kUm5q_Z",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Constants (Data locations and hyperparapeters) Setup"
       ]
     },
     {
@@ -123,16 +169,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7DBk20JiSqiS",
-        "colab_type": "text"
-      },
-      "source": [
-        "Specify hyperparameters"
-      ]
     },
     {
       "cell_type": "code",
@@ -175,47 +211,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "q3kqWRyfwc3Z",
-        "colab_type": "text"
-      },
-      "source": [
-        "###Silence Warnings\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "L7RffwGmt3pO",
-        "colab_type": "text"
-      },
-      "source": [
-        "- 0: all messages are logged (default behavior)\n",
-        "- 1: INFO messages are not printed\n",
-        "- 2: INFO and WARNING messages are not printed\n",
-        "- 3: INFO, WARNING, and ERROR messages are not printed"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-2N2_KNFwcfy",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "#os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2' "
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "hXt8jbid4Zzd",
         "colab_type": "text"
       },
       "source": [
-        "###Model"
+        "##Model"
       ]
     },
     {
@@ -421,81 +421,23 @@
         "colab_type": "text"
       },
       "source": [
-        "##Create Estimator and Train"
+        "##Training"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "l9d2TMXRpqDe",
-        "colab_type": "text"
-      },
-      "source": [
-        "###Create Estimator"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "VAKzY479Y0P0",
-        "colab_type": "code",
-        "outputId": "7813df9e-ed9d-4c06-eb9e-26ffb6cda2dc",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 71
-        }
-      },
-      "source": [
-        "classifier = tf.estimator.Estimator(model_fn = deficit_cnn_model)"
-      ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING: Logging before flag parsing goes to stderr.\n",
-            "W0628 15:45:36.186709 140579850200960 estimator.py:1811] Using temporary folder as model directory: /tmp/tmp9oizd2ko\n"
-          ],
-          "name": "stderr"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "miR0udQm7dNe"
-      },
-      "source": [
-        "###Training"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "Tb-Ua4Jh7e1t",
-        "colab": {}
-      },
-      "source": [
-        "# Shape: [606, 50, HISTORY, 1]\n",
-        "input_layer = tf.reshape(train_data, [-1, NODE_COUNT, HISTORY, 1])"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
         "id": "-g_WPM1M7R3G",
-        "outputId": "70541873-8ca0-4b6b-deaf-ceef0053282c",
+        "outputId": "35699f34-cd37-48ee-a8c8-6adf509806cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 547
+          "height": 564
         }
       },
       "source": [
+        "classifier = tf.estimator.Estimator(model_fn = deficit_cnn_model)\n",
+        "\n",
         "train_input_fn = tf.estimator.inputs.numpy_input_fn(\n",
         "    x = train_data,\n",
         "    y = train_labels,\n",
@@ -510,43 +452,55 @@
         "    #hooks = [logging_hook]\n",
         ")"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "W0628 15:45:36.245956 140579850200960 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
+            "W0628 16:01:06.474363 139662299248512 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use Variable.read_value. Variables in 2.X are initialized automatically both in eager and graph (inside tf.defun) contexts.\n",
-            "W0628 15:45:36.260403 140579850200960 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_queue_runner.py:62: QueueRunner.__init__ (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0628 16:01:06.514079 139662299248512 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_queue_runner.py:62: QueueRunner.__init__ (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n",
-            "W0628 15:45:36.262594 140579850200960 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_functions.py:500: add_queue_runner (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0628 16:01:06.527472 139662299248512 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_functions.py:500: add_queue_runner (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n",
-            "W0628 15:45:36.275767 140579850200960 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:20: conv2d (from tensorflow.python.layers.convolutional) is deprecated and will be removed in a future version.\n",
+            "W0628 16:01:06.573579 139662299248512 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:20: conv2d (from tensorflow.python.layers.convolutional) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use `tf.keras.layers.Conv2D` instead.\n",
-            "W0628 15:45:36.278989 140579850200960 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+            "W0628 16:01:06.598697 139662299248512 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-            "W0628 15:45:36.478728 140579850200960 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:29: max_pooling2d (from tensorflow.python.layers.pooling) is deprecated and will be removed in a future version.\n",
+            "W0628 16:01:07.398261 139662299248512 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:29: max_pooling2d (from tensorflow.python.layers.pooling) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.MaxPooling2D instead.\n",
-            "W0628 15:45:36.610905 140579850200960 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:43: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+            "W0628 16:01:08.005083 139662299248512 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:43: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.dense instead.\n",
-            "W0628 15:45:36.875300 140579850200960 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:52: dropout (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+            "W0628 16:01:08.958587 139662299248512 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:52: dropout (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.dropout instead.\n",
-            "W0628 15:45:36.957730 140579850200960 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/losses/losses_impl.py:121: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+            "W0628 16:01:09.232720 139662299248512 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/losses/losses_impl.py:121: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-            "W0628 15:45:37.955398 140579850200960 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/monitored_session.py:875: start_queue_runners (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0628 16:01:11.788187 139662299248512 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/monitored_session.py:875: start_queue_runners (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n"
           ],
           "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow_estimator.python.estimator.estimator.Estimator at 0x7f058758c390>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
         }
       ]
     },
@@ -565,7 +519,11 @@
       "metadata": {
         "id": "wz7EBVAJY659",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        },
+        "outputId": "1186893e-43d9-47e7-f8bd-f7772919050d"
       },
       "source": [
         "# Evaluate the model and print results\n",
@@ -578,8 +536,25 @@
         "eval_results = classifier.evaluate(input_fn = eval_input_fn)\n",
         "print(eval_results)\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "W0628 16:26:45.626167 139662299248512 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use standard file APIs to check for files with this prefix.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "{'accuracy': 0.625, 'loss': 0.65506697, 'global_step': 100000}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
