about to be replaced by model with dynamic hidden layers

--- a/cnn/dynamic_deficit_cnn.ipynb
+++ b/cnn/dynamic_deficit_cnn.ipynb
@@ -71,10 +71,10 @@
       "metadata": {
         "id": "7BgtCd2okfpJ",
         "colab_type": "code",
-        "outputId": "b5ea567d-66a5-464e-96fb-722fea8ab65b",
+        "outputId": "49d3bd40-edfe-40c7-85ec-114ac0e24ebc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 0
         }
       },
       "source": [
@@ -195,7 +195,7 @@
       },
       "source": [
         "CONV_FILTERS = [64, 128]\n",
-        "CONV_SIZES = [[5, 5], [5, 5]]\n",
+        "CONV_SIZES = [[10, 10], [10, 10]]\n",
         "\n",
         "CONV_COUNT = len(CONV_FILTERS)\n",
         "\n",
@@ -429,10 +429,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "-g_WPM1M7R3G",
-        "outputId": "35699f34-cd37-48ee-a8c8-6adf509806cb",
+        "outputId": "f83d191a-a47a-471b-f1a9-08d840753a13",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 564
+          "height": 598
         }
       },
       "source": [
@@ -452,39 +452,41 @@
         "    #hooks = [logging_hook]\n",
         ")"
       ],
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "W0628 16:01:06.474363 139662299248512 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
+            "WARNING: Logging before flag parsing goes to stderr.\n",
+            "W0628 16:32:54.270106 139767211579264 estimator.py:1811] Using temporary folder as model directory: /tmp/tmpux_0wfyv\n",
+            "W0628 16:32:54.296656 139767211579264 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use Variable.read_value. Variables in 2.X are initialized automatically both in eager and graph (inside tf.defun) contexts.\n",
-            "W0628 16:01:06.514079 139662299248512 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_queue_runner.py:62: QueueRunner.__init__ (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0628 16:32:54.318650 139767211579264 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_queue_runner.py:62: QueueRunner.__init__ (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n",
-            "W0628 16:01:06.527472 139662299248512 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_functions.py:500: add_queue_runner (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0628 16:32:54.321323 139767211579264 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_functions.py:500: add_queue_runner (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n",
-            "W0628 16:01:06.573579 139662299248512 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:20: conv2d (from tensorflow.python.layers.convolutional) is deprecated and will be removed in a future version.\n",
+            "W0628 16:32:54.339095 139767211579264 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:20: conv2d (from tensorflow.python.layers.convolutional) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use `tf.keras.layers.Conv2D` instead.\n",
-            "W0628 16:01:06.598697 139662299248512 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+            "W0628 16:32:54.342958 139767211579264 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-            "W0628 16:01:07.398261 139662299248512 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:29: max_pooling2d (from tensorflow.python.layers.pooling) is deprecated and will be removed in a future version.\n",
+            "W0628 16:32:54.619929 139767211579264 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:29: max_pooling2d (from tensorflow.python.layers.pooling) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.MaxPooling2D instead.\n",
-            "W0628 16:01:08.005083 139662299248512 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:43: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+            "W0628 16:32:54.800844 139767211579264 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:43: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.dense instead.\n",
-            "W0628 16:01:08.958587 139662299248512 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:52: dropout (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+            "W0628 16:32:55.132450 139767211579264 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:52: dropout (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.dropout instead.\n",
-            "W0628 16:01:09.232720 139662299248512 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/losses/losses_impl.py:121: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+            "W0628 16:32:55.234121 139767211579264 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/losses/losses_impl.py:121: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-            "W0628 16:01:11.788187 139662299248512 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/monitored_session.py:875: start_queue_runners (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0628 16:32:56.177620 139767211579264 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/monitored_session.py:875: start_queue_runners (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n"
           ],
@@ -494,13 +496,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow_estimator.python.estimator.estimator.Estimator at 0x7f058758c390>"
+              "<tensorflow_estimator.python.estimator.estimator.Estimator at 0x7f1df49cda58>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 9
         }
       ]
     },
@@ -523,7 +525,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 105
         },
-        "outputId": "1186893e-43d9-47e7-f8bd-f7772919050d"
+        "outputId": "27192b03-3133-4d86-82f7-56633aef36e1"
       },
       "source": [
         "# Evaluate the model and print results\n",
@@ -536,12 +538,12 @@
         "eval_results = classifier.evaluate(input_fn = eval_input_fn)\n",
         "print(eval_results)\n"
       ],
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "W0628 16:26:45.626167 139662299248512 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
+            "W0628 16:55:08.277232 139767211579264 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use standard file APIs to check for files with this prefix.\n"
           ],
@@ -550,7 +552,7 @@
         {
           "output_type": "stream",
           "text": [
-            "{'accuracy': 0.625, 'loss': 0.65506697, 'global_step': 100000}\n"
+            "{'accuracy': 0.625, 'loss': 0.65350837, 'global_step': 100000}\n"
           ],
           "name": "stdout"
         }
