dynamic number of hidden layers

--- a/cnn/dynamic_deficit_cnn.ipynb
+++ b/cnn/dynamic_deficit_cnn.ipynb
@@ -7,7 +7,9 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [
-        "q3kqWRyfwc3Z"
+        "ogzhAuBz56_g",
+        "q3kqWRyfwc3Z",
+        "BifdneGnqGz4"
       ],
       "include_colab_link": true
     },
@@ -71,7 +73,7 @@
       "metadata": {
         "id": "7BgtCd2okfpJ",
         "colab_type": "code",
-        "outputId": "49d3bd40-edfe-40c7-85ec-114ac0e24ebc",
+        "outputId": "dbc131ef-2a32-4896-e27a-0ab5e1769666",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -159,7 +161,7 @@
         "DATA_FOLDER = \"e4_prob_of_death_at_80/\"\n",
         "\n",
         "# Shape: [training_size, 50 * HISTORY]\n",
-        "HISTORY = 5\n",
+        "HISTORY = 15\n",
         "NODE_COUNT = 50\n",
         "\n",
         "TRAIN_SET = DATA_FOLDER + str(HISTORY) + \"x5y_train_set.txt\"\n",
@@ -194,8 +196,8 @@
         "colab": {}
       },
       "source": [
-        "CONV_FILTERS = [64, 128]\n",
-        "CONV_SIZES = [[10, 10], [10, 10]]\n",
+        "CONV_FILTERS = [32, 64, 128]\n",
+        "CONV_SIZES = [[5, 5], [5, 5], [5, 5]]\n",
         "\n",
         "CONV_COUNT = len(CONV_FILTERS)\n",
         "\n",
@@ -234,12 +236,15 @@
         "    \n",
         "    layer = tf.reshape(features, [-1, NODE_COUNT, HISTORY, 1])\n",
         "    \n",
+        "    # Image length and width\n",
+        "    length = NODE_COUNT\n",
+        "    width = HISTORY\n",
         "    for i in range(CONV_COUNT):\n",
         "\n",
         "        ''' Convolutional Layer '''\n",
         "        # Computes 32 features using a 5x5 filter with ReLU activation.\n",
         "        #   Padding is added to preserve width and height.\n",
-        "        # Output Tensor Shape: [batch_size, 50, HISTORY, filter size]\n",
+        "        # Output Tensor Shape: [batch_size, length, width, filter size]\n",
         "        layer = tf.layers.conv2d(\n",
         "            inputs = layer,\n",
         "            filters = CONV_FILTERS[i],\n",
@@ -250,17 +255,19 @@
         "    \n",
         "        ''' Pooling Layer '''\n",
         "        # Max pooling layer with a 2x2 filter and stride of 2\n",
-        "        # Output Tensor Shape: [batch_size, 25, HISTORY / 2, filter size]\n",
+        "        # Output Tensor Shape: [batch_size, length / 2, width / 2 , filter size]\n",
         "        layer = tf.layers.max_pooling2d(\n",
         "            inputs = layer,\n",
         "            pool_size = POOL_SIZE,\n",
         "            strides = POOL_STRIDE\n",
         "        )\n",
+        "        \n",
+        "        length = int(length / 2)\n",
+        "        width = int(width / 2)\n",
         "\n",
+        "    \n",
         "    ''' Flatten tensor into a batch of vectors '''\n",
-        "    # Output Tensor Shape:\n",
-        "    #   [batch_size, 12 * last filter size * (HISTORY / pooling size)]\n",
-        "    pool2_flat = tf.reshape(layer, [-1, 12 * CONV_FILTERS[i] * int(HISTORY / 4)])\n",
+        "    pool2_flat = tf.reshape(layer, [-1, CONV_FILTERS[i] * length * width])\n",
         "\n",
         "    ''' Dense Layer '''\n",
         "    # Densely connected layer with 1024 neurons\n",
@@ -429,10 +436,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "-g_WPM1M7R3G",
-        "outputId": "f83d191a-a47a-471b-f1a9-08d840753a13",
+        "outputId": "7de66bd3-78d8-4d80-a57a-2ceec65b2f3c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 598
+          "height": 615
         }
       },
       "source": [
@@ -458,35 +465,48 @@
           "output_type": "stream",
           "text": [
             "WARNING: Logging before flag parsing goes to stderr.\n",
-            "W0628 16:32:54.270106 139767211579264 estimator.py:1811] Using temporary folder as model directory: /tmp/tmpux_0wfyv\n",
-            "W0628 16:32:54.296656 139767211579264 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
+            "W0628 17:06:33.515393 140066262304640 estimator.py:1811] Using temporary folder as model directory: /tmp/tmp89bpjb_i\n",
+            "W0628 17:06:33.540589 140066262304640 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use Variable.read_value. Variables in 2.X are initialized automatically both in eager and graph (inside tf.defun) contexts.\n",
-            "W0628 16:32:54.318650 139767211579264 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_queue_runner.py:62: QueueRunner.__init__ (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0628 17:06:33.563014 140066262304640 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_queue_runner.py:62: QueueRunner.__init__ (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n",
-            "W0628 16:32:54.321323 139767211579264 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_functions.py:500: add_queue_runner (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0628 17:06:33.565653 140066262304640 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_functions.py:500: add_queue_runner (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n",
-            "W0628 16:32:54.339095 139767211579264 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:20: conv2d (from tensorflow.python.layers.convolutional) is deprecated and will be removed in a future version.\n",
+            "W0628 17:06:33.582803 140066262304640 deprecation.py:323] From <ipython-input-6-15c70f0848e6>:22: conv2d (from tensorflow.python.layers.convolutional) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use `tf.keras.layers.Conv2D` instead.\n",
-            "W0628 16:32:54.342958 139767211579264 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+            "W0628 17:06:33.586616 140066262304640 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-            "W0628 16:32:54.619929 139767211579264 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:29: max_pooling2d (from tensorflow.python.layers.pooling) is deprecated and will be removed in a future version.\n",
+            "W0628 17:06:33.832284 140066262304640 deprecation.py:323] From <ipython-input-6-15c70f0848e6>:31: max_pooling2d (from tensorflow.python.layers.pooling) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.MaxPooling2D instead.\n",
-            "W0628 16:32:54.800844 139767211579264 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:43: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+            "W0628 17:06:34.055290 140066262304640 deprecation.py:323] From <ipython-input-6-15c70f0848e6>:49: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
-            "Use keras.layers.dense instead.\n",
-            "W0628 16:32:55.132450 139767211579264 deprecation.py:323] From <ipython-input-6-5739cdd3ed46>:52: dropout (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+            "Use keras.layers.dense instead.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "SIZE: 1536\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "W0628 17:06:34.402923 140066262304640 deprecation.py:323] From <ipython-input-6-15c70f0848e6>:58: dropout (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.dropout instead.\n",
-            "W0628 16:32:55.234121 139767211579264 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/losses/losses_impl.py:121: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+            "W0628 17:06:34.506869 140066262304640 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/losses/losses_impl.py:121: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-            "W0628 16:32:56.177620 139767211579264 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/monitored_session.py:875: start_queue_runners (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0628 17:06:35.481285 140066262304640 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/monitored_session.py:875: start_queue_runners (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n"
           ],
@@ -496,7 +516,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow_estimator.python.estimator.estimator.Estimator at 0x7f1df49cda58>"
+              "<tensorflow_estimator.python.estimator.estimator.Estimator at 0x7f636ec2ed30>"
             ]
           },
           "metadata": {
@@ -523,9 +543,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
+          "height": 122
         },
-        "outputId": "27192b03-3133-4d86-82f7-56633aef36e1"
+        "outputId": "62acb0da-34a3-474b-818d-def1cbc7ec14"
       },
       "source": [
         "# Evaluate the model and print results\n",
@@ -543,7 +563,14 @@
         {
           "output_type": "stream",
           "text": [
-            "W0628 16:55:08.277232 139767211579264 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
+            "SIZE: 1536\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "W0628 17:19:56.073741 140066262304640 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use standard file APIs to check for files with this prefix.\n"
           ],
@@ -552,7 +579,7 @@
         {
           "output_type": "stream",
           "text": [
-            "{'accuracy': 0.625, 'loss': 0.65350837, 'global_step': 100000}\n"
+            "{'accuracy': 0.601, 'loss': 0.6592275, 'global_step': 100000}\n"
           ],
           "name": "stdout"
         }
